[package]
name = "Diamond-Drops"
version = "0.1.0-a"
authors = ["James Ray <16969914+jamesray1@users.noreply.github.com>"]
description = "Used to create a custom type for 32-bit-wide byte arrays. Used for Drops of Diamond (more information about DoD is available at https://github.com/Drops-of-Diamond/Diamond-drops)."
keywords = ["Ethereum",
	"sharding",
	"phase 1",
	"Ethereum 2.0",
	"scalability",
	"data-availability",
	"enshrined-in-consensus",
	"blockchain"]
license = "Unlicense"

[dependencies]
ethereum-types = "0.3.0"
ethcore-bytes = "0.1.0"

[badges]
travis-ci = { repository = "Drops-of-Diamond/Diamond-drops", branch = "master" }
codecov = { repository = "Drops-of-Diamond/Diamond-drops", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "Drops-of-Diamond/Diamond-drops" }
is-it-maintained-open-issues = { repository = "Drops-of-Diamond/Diamond-drops" }

