[package]
name = "diamond_drops"
version = "0.1.0-a"
authors = ["James Ray", "ChosunOne", "Luke Schoen"]
description = "A work in progress implementation of Ethereum sharding in Rust."
keywords = ["Ethereum",
	"sharding",
	"phase 1",
	"Ethereum 2.0",
	"scalability",
	"data-availability",
	"enshrined-in-consensus",
	"blockchain"]
license = "Unlicense"
repository = "https://github.com/Drops-of-Diamond/diamond_drops"
build = "build.rs"

[lib]
name = "diamond_drops"
path = "src/lib.rs"

[dependencies]
ethereum-types = "0.3.0"
ethcore-bytes = "0.1.0"

[badges]
travis-ci = { repository = "Drops-of-Diamond/Diamond-drops", branch = "master" }
codecov = { repository = "Drops-of-Diamond/Diamond-drops", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "Drops-of-Diamond/Diamond-drops" }
is-it-maintained-open-issues = { repository = "Drops-of-Diamond/Diamond-drops" }

[build-dependencies.mml]
version = "0.1"
