[package]
name = "diamond_drops"
version = "0.1.0-a"
authors = ["James Ray (@jamesray1)", "Josiah (@ChosunOne)", "Luke Schoen (@ltfschoen)"]
description = "A work in progress implementation of Ethereum sharding in Rust."
keywords = ["Ethereum",
	"sharding",
	"phase 1",
	"Ethereum 2.0",
	"scalability",
	"data-availability",
	"enshrined-in-consensus",
	"blockchain"]
license = "Unlicense"
repository = "https://github.com/Drops-of-Diamond/diamond_drops"
readme = "README.md"

[[bin]]
name = "cli"
path = "src/bin/bin.rs"
doc = false # Resolve documentation conflict

[dependencies]
diamond-drops-cli = { path = "cli" }
diamond-drops-env = { path = "env" }
diamond-drops-node = { path = "node" }
log = { version = "0.4.1", features = ["max_level_debug", "release_max_level_warn"] }
error-chain = "0.11.0"

[dependencies.clap]
version = "^2"
default-features = false

# Cherry-pick the features you'd like to use
features = [ "suggestions", "vec_map" ]


[dev-dependencies]
cargo-watch = { version = "6.0.0" }

[badges]
travis-ci = { repository = "Drops-of-Diamond/Diamond-drops", branch = "master" }
codecov = { repository = "Drops-of-Diamond/Diamond-drops", branch = "master", service = "github" }
is-it-maintained-issue-resolution = { repository = "Drops-of-Diamond/Diamond-drops" }
is-it-maintained-open-issues = { repository = "Drops-of-Diamond/Diamond-drops" }
