[package]
name = "diamond-drops-cli"
version = "0.1.0-a"
authors = ["James Ray (@jamesray1)", "Josiah (@ChosunOne)", "Luke Schoen (@ltfschoen)"]
license = "Unlicense"

[dependencies]
log = { version = "0.4.1", features = ["max_level_debug", "release_max_level_warn"] }
chrono = { version = "0.4", features = ["serde"] }
fern = { version = "0.5", features = ["colored"] }