[package]
name = "diamond-drops-node"
version = "0.1.0-a"
authors = ["James Ray (@jamesray1)", "Josiah (@ChosunOne)", "Luke Schoen (@ltfschoen)"]
license = "Unlicense"

[dependencies]
diamond-drops-cli = { path = "../cli" }
ethereum-types = "0.3.0"
ethcore-bytes = "0.1.0"
tiny-keccak = "1.3"
log = { version = "0.4.1", features = ["max_level_debug", "release_max_level_warn"] }
#pyo3 = "0.2"
#cpython = "0.2.0" # src/modules/collation/body.rs