[package]
name = "diamond-drops-node"
version = "0.1.0-a"
authors = ["James Ray (@jamesray1)", "Josiah (@ChosunOne)", "Luke Schoen (@ltfschoen)"]
license = "Unlicense"
build = "build.rs"

[dependencies]
diamond-drops-cli = { path = "../cli" }
error-chain = "0.11.0"
ethereum-types = "0.3.0"
ethcore-bytes = "0.1.0"
tiny-keccak = "1.3"
log = { version = "0.4.1", features = ["max_level_debug", "release_max_level_warn"] }
#bitreader = "0.3.1"

[build-dependencies.mml]
version = "0.1"